--- a/webapp/css/landing.css
+++ b/webapp/css/landing.css
@@ -1,1 +1,27 @@
 
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #e2231a;
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        img {
+            width: 200px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 10px;
+        }
+        .welcome-text {
+            font-size: 2rem;
+            font-weight: bold;
+            opacity: 0;
+            transition: opacity 2s ease-in-out;
+        }
