--- a/webapp/React/forcasttx/src/styles/Dashboard.css
+++ b/webapp/React/forcasttx/src/styles/Dashboard.css
@@ -1,13 +1,13 @@
-/* Dashboard Styling */
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4; /* Slightly different background for the dashboard */
+    background-color: #f4f4f4; 
     color: black;
     margin: 0;
     padding: 0;
 }
 
-.container {
+.dashboard-container {
     width: 80%;
     max-width: 1200px;
     margin: 50px auto;
@@ -15,32 +15,33 @@ body {
     border-radius: 10px;
     background-color: white;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    animation: fadeIn 2s forwards; 
 }
 
-h1 {
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.dashboard-title {
     text-align: center;
     font-size: 2.5rem;
     color: #333;
     margin-bottom: 20px;
 }
 
-.subtitle {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: #e2231a;
-    font-family: 'Arial Black', sans-serif;
-    text-align: center;
-}
-
-/* Tabs */
-.tabs {
+.dashboard-tabs {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
 }
 
-.tabs button {
+.dashboard-tabs button {
     padding: 10px 20px;
     margin: 0 10px;
     font-size: 16px;
@@ -52,21 +53,19 @@ h1 {
     color: #333;
 }
 
-.tabs button.active {
+.dashboard-tabs button.active {
     background-color: #e2231a;
     color: white;
     border: none;
-    
 }
 
-.tabs button:hover {
+.dashboard-tabs button:hover {
     background-color: #9f3d3d;
     transform: scale(1.05);
-    
 }
 
 /* Tab Content */
-.tab-content {
+.dashboard-tab-content {
     text-align: center;
 }
 
@@ -88,5 +87,20 @@ p {
     font-size: 1.2rem;
     color: #555;
 }
+.Logout-btn{
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #fff;
+    color: d32d27;
+    border: 2px solid #e2231a;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
 
-/* Optional: Add any additional styling for the content if needed */
+.Logout-btn:hover{
+    background-color: #f8d7da;
+    transform: scale(1.05);
+}
