--- a/webapp/React/forcasttx/src/styles/login.css
+++ b/webapp/React/forcasttx/src/styles/login.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     background-color: white;
@@ -5,36 +6,65 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-.container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+
+.login-container {
     width: 300px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    animation: fadeIn 2s forwards; /* Animation for fade-in */
 }
+
+/* Fade In Animation */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 img {
-    width: 150px;
-    margin-bottom: 10px;
+    width: 120px;
+    margin-bottom: 8px;
 }
-.subtitle {
-    font-size: 1.2rem;
+
+.login-subtitle {
+    font-size: 1.1rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     color: #e2231a;
     font-family: 'Arial Black', sans-serif;
 }
-input {
-    width: 100%;
+
+.login-title {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.login-input {
+    width: 80%; 
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-sizing: border-box;
 }
-button {
+
+.login-btn {
     width: 100%;
     padding: 12px;
     background-color: #e2231a;
@@ -45,20 +75,25 @@ button {
     cursor: pointer;
     transition: background 0.3s, transform 0.2s;
 }
-button:hover {
+
+.login-btn:hover {
     background-color: #c91d16;
     transform: scale(1.05);
 }
 
-/* Create Account Button - Smaller & Outlined */
 #createAccountBtn {
-    background-color: white;
-    color: #e2231a;
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #fff;
+    color: d32d27;
     border: 2px solid #e2231a;
-    font-size: 14px;
-    padding: 10px;
-    margin-top: 10px; /* Add spacing between buttons */
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
 }
+
 #createAccountBtn:hover {
     background-color: #f8d7da;
     transform: scale(1.05);
